k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paauth
  labels:
    app: paauth
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: paauth
